<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_borrowed_items_height"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/borrowedItemTitle"
        android:layout_width="@dimen/borrowed_item_width"
        android:layout_height="wrap_content"
        android:text="@string/hardcoded_item"
        android:textSize="@dimen/item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/borrowedItemUntil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/until"
        android:textSize="@dimen/item_info_text_size"
        app:layout_constraintEnd_toStartOf="@id/borrowedItemDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/small_margin"/>

    <TextView
        android:id="@+id/borrowedItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardcoded_date"
        android:textStyle="bold"
        android:textSize="@dimen/item_text_size"
        app:layout_constraintEnd_toStartOf="@id/editReturnRequestButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/medium_margin"/>

    <Button
        android:id="@+id/editReturnRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>