<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddNormalItemFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/toolbar_margin_end">

            <TextView
                android:id="@+id/titleTab"
                style="@style/Title_Toolbar"
                android:text="@string/title_items"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/ibToCart"
                android:src="@drawable/toolbar_cart"
                style="@style/ImageButton_Toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/top_margin_fragment">

        <TextView
            android:id="@+id/addNormalItemTitle"
            style="@style/Title_Fragment"
            android:text="@string/add_to_cart_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/normalItemImage"
            android:layout_width="135dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arduinoyun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addNormalItemTitle"
            android:layout_marginTop="@dimen/medium_margin"/>

        <TextView
            android:id="@+id/normalItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Arduino Yun"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/normalItemImage"
            app:layout_constraintTop_toBottomOf="@id/normalItemImage"
            app:layout_constraintEnd_toEndOf="@id/normalItemImage" />

        <TextView
            android:id="@+id/pickupTitle"
            style="@style/Order_Overview_Info_Title"
            android:text="@string/pickup_title"
            app:layout_constraintEnd_toStartOf="@id/pickupDate"
            app:layout_constraintTop_toBottomOf="@id/normalItemTitle"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/top_margin_fragment"/>

        <TextView
            android:id="@+id/pickupDate"
            style="@style/Order_Overview_Info"
            android:text="@string/pick_a_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/pickupTitle"
            app:layout_constraintBottom_toBottomOf="@id/pickupTitle"/>

        <TextView
            android:id="@+id/pickupTime"
            style="@style/Order_Overview_Info"
            android:text="@string/pick_a_time"
            app:layout_constraintStart_toEndOf="@id/pickupDate"
            app:layout_constraintTop_toTopOf="@id/pickupDate"
            app:layout_constraintBottom_toBottomOf="@id/pickupDate"
            android:layout_marginStart="@dimen/big_margin"/>

        <ImageButton
            android:id="@+id/pickupCalendarButton"
            style="@style/Order_Overview_Calendar_Button"
            app:layout_constraintTop_toTopOf="@id/pickupTitle"
            app:layout_constraintBottom_toBottomOf="@id/pickupTitle"
            app:layout_constraintStart_toEndOf="@id/pickupTime"
            android:layout_marginStart="@dimen/big_margin"/>

        <TextView
            android:id="@+id/returnTitle"
            style="@style/Order_Overview_Info_Title"
            android:text="@string/return_title"
            app:layout_constraintEnd_toEndOf="@id/pickupTitle"
            app:layout_constraintTop_toBottomOf="@id/pickupTitle"
            android:layout_marginTop="@dimen/big_margin" />

        <TextView
            android:id="@+id/returnDate"
            style="@style/Order_Overview_Info"
            android:text="@string/pick_a_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/returnTitle"
            app:layout_constraintBottom_toBottomOf="@id/returnTitle"/>

        <TextView
            android:id="@+id/returnTime"
            style="@style/Order_Overview_Info"
            android:text="@string/pick_a_time"
            app:layout_constraintStart_toStartOf="@id/pickupTime"
            app:layout_constraintTop_toTopOf="@id/returnDate"
            app:layout_constraintBottom_toBottomOf="@id/returnDate"/>

        <ImageButton
            android:id="@+id/returnCalendarButton"
            style="@style/Order_Overview_Calendar_Button"
            app:layout_constraintTop_toTopOf="@id/returnTitle"
            app:layout_constraintBottom_toBottomOf="@id/returnTitle"
            app:layout_constraintStart_toEndOf="@id/returnTime"
            android:layout_marginStart="@dimen/big_margin"/>

        <Button
            android:id="@+id/addNormalItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add to cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/returnTitle"
            android:layout_marginTop="@dimen/big_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>